--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -1,8 +1,15 @@
-<nav class="flex justify-between border-off-white border-b-[1px] border-opacity-10 py-5">
-    <a href="/" class="font-bold no-underline">Timy Villarmia</a>
-    <div class="hidden uppercase">
-        <a href="/">Home</a>
-        <a href="/info">Info</a>
+<nav class="fixed top-0 left-0 right-0 z-50 bg-off-black border-white border-b-[1px] border-opacity-10 ">
+    <div class="container mx-auto flex justify-between py-5">
+        <a href="/" class="font-bold no-underline">Timy Villarmia</a>
+        <div class="hidden sm:flex sm:gap-x-8">
+            <div class="flex gap-x-6 items-center">
+                <a href="/" class="no-underline uppercase text-base text-mid-gray">home</a>
+                <a href="/info" class="no-underline uppercase text-base text-mid-gray">info</a>
+            </div>
+            <div>
+                <a href="mailto:hello@timyvillaria.com" class="no-underline">hello@timyvillarmia.com</a>
+            </div>
+        </div>
     </div>
-    <a href="mailto:hello@timyvillaria.com" class="no-underline">hello@timyvillarmia.com</a>
+
 </nav>
