--- a/src/components/PlaygroundCard.astro
+++ b/src/components/PlaygroundCard.astro
@@ -3,16 +3,10 @@ const { project } = Astro.props;
 import { Icon } from 'astro-icon/components';
 ---
 
-
-<div class="flex flex-row items-center justify-between rounded-lg border-[1px] border-off-white py-6 px-4 ">
+<a href={project.link}target="_blank"  class="group slide-top no-underline flex flex-row items-center justify-between rounded-lg border-[.5px] border-white py-6 px-8  ">
     <div class="">
-        <p class="font-bold">{project.title}</p>
+        <p class="font-bold opacity-100">{project.title}</p>
         <p class="font-light">{project.category}</p>
     </div>
-    <div class="">
-        <a href={project.link} target="_blank">
-            <Icon name="mdi:github" class="text-4xl"/>
-        </a>
-    </div>
-
-</div>
+    <Icon name="mdi:github" class="text-4xl"/>
+</a>
