--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,10 @@
 ---
 import Layout from '../layouts/Layout.astro';
 import { Icon } from 'astro-icon/components';
-import { Image } from 'astro:assets';
+import { Picture } from 'astro:assets';
 import Indicator from '../../public/images/indicator.webp';
 import Profile from '../../public/images/profile.webp';
+import CodeGif from '../../public/images/code.gif';
 
 
 import {getCollection, getEntry} from "astro:content";
@@ -18,27 +19,29 @@ const playground = await getEntry('data', 'playground');
 
 <Layout title="Timy Villarmia">
 	<main>
-		<section class="py-28 lg:py-40">
+		<section class="py-28 lg:pt-48 lg:pb-28">
 			<div class="container mx-auto">
-				<div>
-					<h1 class="text-xl font-medium text-balance sm:text-4xl xl:text-5xl">Hey there!, I’m Timy, a computer science student - who enjoys the <span class="font-display">challenge of solving complex problems </span>
-						& <span class="font-display">building stuffs with code.</span>
+				<div class="relative">
+					<h1 class="text-2xl font-medium text-balance sm:text-5xl xl:text-6xl">What’s up. I’m Timy,  a programmer - who enjoys <span class="font-display-bold">solving complex problems </span>
+						& <span class="font-display-bold">building stuffs with code.</span>
 					</h1>
-					<div class="flex justify-between items-center my-6 sm:justify-start sm:gap-x-8">
+					<Picture src={CodeGif} formats={['gif']} alt="person coding" class="hidden w-60 h-auto absolute rounded-lg top-0 right-0"/>
+					<div class="flex justify-between items-center my-8 sm:justify-start sm:gap-x-8">
 						<div class="flex justify-center items-center gap-x-1">
 							<Icon name="mdi:location"/>
-							<p>Cebu City, PH</p>
+							<p class="opacity-100">Cebu City, PH</p>
 						</div>
 						<div class="flex justify-center items-center gap-x-1">
 							<Icon name="mdi:check-circle-outline" class="text-[#34d399]"/>
-							<p>Available for Internship</p>
+							<p class="opacity-100">Available for Internship</p>
 						</div>
 					</div>
 				</div>
 				<div class="flex justify-center pt-10 sm:justify-start lg:justify-end">
-					<Image 
+					<Picture 
 					src={Indicator}
 					alt="scroll down"
+					formats={['webp']}
 					class={"h-auto w-auto lg:mr-20"}
 					loading="lazy"
 					decoding="async"
@@ -47,26 +50,27 @@ const playground = await getEntry('data', 'playground');
 			</div>
 
 		</section>
-		<section class="bg-dark-gray py-20 text-pretty">
+		<section class="bg-dark-gray py-20 text-balance lg:py-32">
 			<div class="container mx-auto flex flex-col gap-y-20 lg:flex-row lg:gap-x-10">
 				<div class="lg:basis-1/2">
 					<p class="mb-8">
-						I'm a Filipino computer science student passionate about building innovative and user-centric software solutions. From front-end to back-end, I strive to create impactful and seamless digital experiences.
+						I’m a Filipino programmer specializing in web development, currently pursuing a Bachelor of Science in Computer Science. I’m passionate in interrelating humans and technology through code. My focus lies in building scalable, accessible, and technically refined software. 
 					</p>
 					<p class="mb-8">
 						Find me elsewhere on the web: <a href="https://www.linkedin.com/in/timyvillarmia/" target="_blank">LinkedIn</a>, <a href="https://github.com/TimyVillarmia" target="_blank">Github</a>, <a href="https://www.facebook.com/VillarmiaTimy" target="_blank">Facebook</a> or e-mail me at <a href="mailto:hello@timyvillarmia.com">hello@timyvillarmia.com</a>.
 					</p>
-					<button class="rounded-lg border-[1px] border-off-white py-2 px-4">
+					<button class="">
 						<a href="/info" class="flex items-center no-underline gap-x-1.5">
 							About Me
 							<span><Icon name="mdi:arrow-right-thin" class="text-2xl"/></span>
 						</a>
 					</button>
 				</div>
-				<div class="lg:basis-1/2">
-					<Image 
+				<div class="container mx-auto lg:basis-1/2">
+					<Picture 
 					src={Profile}
 					alt="Profile"
+					formats={['webp']}
 					class={"h-auto w-auto rounded-lg"}
 					loading="lazy"
 					decoding="async"
@@ -74,29 +78,34 @@ const playground = await getEntry('data', 'playground');
 				</div>
 			</div>
 		</section>
-		<section class="py-20 text-balance">
-			<div class="container mx-auto flex flex-col gap-y-20 lg:flex-row lg:gap-x-10">
+		<section class="py-20 text-balance lg:py-32">
+			<div class="container mx-auto flex flex-col gap-y-20 lg:flex-row lg:gap-x-4">
 				<div class="lg:basis-1/2">
-					<p class="font-bold uppercase mb-2">featured work</p>
-					<p>
-						a curated selection of my standout projects, showcasing my skills and creativity over the past few years.
-					</p>
+					<div class="sticky top-24">
+						<p class="font-bold uppercase mb-2 opacity-100">featured work</p>
+						<p>
+							a curated selection of my standout projects, showcasing my skills and creativity over the past few years.
+						</p>
+					</div>
 				</div>
-				<div class="lg:basis-1/2">
+				<div class="flex flex-col gap-y-8 lg:basis-1/2 ">
 					{projects.map((project) => <Card project={project} />)}
 				</div>
 			</div>
 			
 		</section>
-		<section class="py-20 bg-dark-gray text-balance">
+		<section class="bg-dark-gray py-20 text-balance lg:py-32">
 			<div class="container mx-auto flex flex-col gap-y-20 lg:flex-row lg:gap-x-10">
 				<div class="lg:basis-1/2">
-					<p class="font-bold uppercase mb-2">Playground</p>
-					<p>
-						A collection of my half-finished projects, 
-						random ideas, experiments that are fun, & 
-						sometimes just a little bit weird.
-					</p>
+					<div class="sticky top-24">
+						<p class="font-bold uppercase mb-2 opacity-100">Playground</p>
+						<p>
+							A collection of my half-finished projects, 
+							random ideas, experiments that are fun, & 
+							sometimes just a little bit weird.
+						</p>
+					</div>
+
 				</div>
 				<div class="flex flex-col gap-y-4 lg:basis-1/2">
 					{playground.data.map((project) => <PlaygroundCard project={project} />)}
